fix horizontal scroll and improved spacing

--- a/src/pages/RampTrainer/style.css
+++ b/src/pages/RampTrainer/style.css
@@ -2,9 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
-  width: 100%;
-  margin: 30px;
 
   h1 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -21,6 +18,7 @@
     font-weight: 700;
     background-color: black;
     border-radius: 10%;
+    margin: 0.3em;
     
     height: 150px;
     width: 150px;
@@ -31,19 +29,20 @@
     color: white
   }
 
+  div {
+    margin: 1.5em
+  }
+
   @media (min-width: 768px) {
 		p {
-			padding: 10px;
       max-width: 40vw;
-      padding: 0px;
 		}
 	}
 
   p {
     font-size: 1.2em;
+    margin: 1rem;
     line-height: 1.5;
-    margin-top: 3em;
-    padding: 30px;
     text-align: center;
   }
 
